# hindsight

./: .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: desktop-release.yml
apps/api/: README.md  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma
apps/api/prisma/migrations/20260505185107_init/: migration.sql
apps/api/prisma/migrations/20260506183257_members_and_invites/: migration.sql
apps/api/prisma/migrations/20260506203409_projects_and_assignments/: migration.sql
apps/api/prisma/migrations/20260506211233_screenshot_ingestion/: migration.sql
apps/api/prisma/migrations/20260512000000_device_presence/: migration.sql
apps/api/prisma/migrations/20260512100000_project_idle_timeout/: migration.sql
apps/api/prisma/migrations/20260612000000_manual_time_entries/: migration.sql
apps/api/scripts/: backfill-time-totals.mjs  db-test-migrate.mjs  diag-screenshots.mjs  make-test-jpeg.mjs  tune-argon2.ts
apps/api/src/: app.ts  server.ts  worker.ts
apps/api/src/auth/: audit.ts  capabilities.test.ts  capabilities.ts  hibp.ts  login-throttle.ts  membership.ts  password.ts  tokens.ts
apps/api/src/config/: env.ts
apps/api/src/lib/: dto.ts  errors.ts  id.ts  logger.ts  mail.ts  prisma.ts  r2.ts  redis.ts  screenshot-keys.ts  sha256.ts
apps/api/src/middleware/: async-handler.ts  bearer-auth.ts  error-handler.ts  idempotency.ts  index.ts  org-scope.ts  project-scope.ts  rate-limit.ts  request-context.ts  validate.ts
apps/api/src/modules/: index.ts
apps/api/src/modules/auth/: handlers.ts  routes.ts  schemas.ts  service.ts  templates.ts
apps/api/src/modules/devices/: handlers.ts  routes.ts  schemas.ts  service.ts
apps/api/src/modules/health/: routes.ts
apps/api/src/modules/invitations/: handlers.ts  routes.ts  schemas.ts  service.ts  templates.ts
apps/api/src/modules/orgs/: handlers.ts  routes.ts  schemas.ts  service.ts
apps/api/src/modules/presence/: handlers.ts  routes.ts  schemas.ts  service.ts
apps/api/src/modules/projects/: handlers.ts  routes.ts  schemas.ts  service.ts
apps/api/src/types/: express-augment.ts
apps/api/src/workers/: process-screenshot.ts  retention-sweep.ts
apps/api/test/: app.test.ts  auth-extras.test.ts  auth.test.ts  devices.test.ts  invitations.test.ts  login-throttle.test.ts  members-direct.test.ts  orgs.test.ts  process-screenshot.test.ts  project-assignments.test.ts  projects.test.ts  reports.test.ts  retention-sweep.test.ts  screenshots.test.ts  setup.ts  time-entries.test.ts
apps/api/test/helpers/: build-app.ts  db.ts  r2-stub.ts
apps/desktop/: .gitignore  CLAUDE.md  RELEASE_NOTES.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_outbox.sql
apps/desktop/src-tauri/src/: activity.rs  auth.rs  capture.rs  db.rs  idle_watcher.rs  lib.rs  lock_watcher.rs  main.rs  outbox_sweeper.rs  permissions.rs  scheduler.rs  uploader.rs  win_aumid.rs
apps/desktop/src/components/: UpdaterDialog.tsx  window-chrome.tsx
apps/desktop/src/lib/: api.test.ts  api.ts  format-elapsed.test.ts  format-elapsed.ts  session-store.ts  use-presence-heartbeat.ts  use-updater.ts
apps/desktop/src/screens/: LoginScreen.tsx  PermissionGateScreen.tsx  TrackerScreen.tsx
apps/desktop/src/test/: setup.ts
apps/web/: .env.example  .gitignore  README.md  index.html  package.json  styles.css  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: globals.css  main.tsx  theme-toggle.js
apps/web/src/components/: app-shell.tsx  auth-card.tsx  command-palette.tsx  error-boundary.tsx  screenshot-dialog.tsx
apps/web/src/lib/: api.test.ts  api.ts  format.ts  money.test.ts  money.ts  project-accent.ts  queries.ts  query.ts  session-store.test.ts  session-store.ts  use-boot.ts  use-can.test.ts  use-can.ts
apps/web/src/routes/: __root.tsx  _app.orgs.$orgId.index.tsx  _app.orgs.$orgId.members.$userId.tsx  _app.orgs.$orgId.members.tsx  _app.orgs.$orgId.projects.$projectId.index.tsx  _app.orgs.$orgId.projects.$projectId.members.tsx  _app.orgs.$orgId.projects.$projectId.reports.tsx  _app.orgs.$orgId.projects.$projectId.screenshots.tsx  _app.orgs.$orgId.projects.$projectId.tsx  _app.orgs.$orgId.projects.index.tsx  _app.orgs.$orgId.report.tsx  _app.orgs.$orgId.reports.tsx  _app.orgs.$orgId.screenshots.tsx  _app.orgs.$orgId.timesheet.tsx  _app.orgs.$orgId.tsx  _app.settings.devices.tsx  _app.settings.password.tsx  _app.settings.profile.tsx  _app.tsx  accept-invite.tsx  forgot-password.tsx  index.tsx  login.tsx  reset-password.tsx  signup.tsx  verify-email.tsx
apps/web/src/test/: msw-server.ts  setup.ts
docs/: 01-overview.md  02-architecture.md  03-tech-stack.md  04-data-model.md  05-api-surface.md  06-desktop-app.md  07-screenshot-pipeline.md  08-auth-and-permissions.md  09-privacy-and-ethics.md  10-roadmap.md  11-glossary.md  12-desktop-updater.md  README.md
plans/00-monorepo-scaffold/: README.md  structure.md  tooling.md
plans/01-backend-structure/: README.md  bootstrap.md  layout.md  modules.md
plans/02-auth-and-orgs/: README.md  audit.md  auth-primitives.md  middleware.md  modules.md  schema.md  testing.md
plans/03-members-and-invites/: README.md  mail.md  modules.md  schema.md  security.md  testing.md
plans/04-projects-and-assignments/: README.md  capabilities.md  modules.md  schema.md  testing.md
plans/05-screenshot-ingestion/: README.md  modules.md  r2.md  schema.md  testing.md  worker.md
plans/06-web-app/: README.md  api-client.md  pages.md  routes.md  scaffold.md  testing.md
plans/07-web-projects/: README.md  pages.md  testing.md
plans/08-desktop-mvp/: README.md  capture.md  outbox.md  scaffold.md  testing.md  ui.md
plans/09-reports/: README.md
plans/10-notifications/: README.md
(+36 files in other folders)
