[package]
name = "hindsight"
version = "0.2.2"
description = "Hindsight desktop tracker"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hindsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

# Updater is desktop-only; mobile builds don't ship it.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Capture + image encoding
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Local outbox + upload
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Idle detection (cross-platform)
user-idle = "0.6"

# Logging + JSON
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors, IDs, time, sync, randomness
thiserror = "1"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
once_cell = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
winreg = "0.55"
# Used directly for toast notifications so we can pass our AUMID even in dev
# mode. tauri-plugin-notification deliberately suppresses the AUMID when the
# exe lives under target/debug or target/release, which makes Windows attribute
# the toast to PowerShell.
tauri-winrt-notification = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
