[package]
name = "hindsight"
version = "0.2.6"
description = "Hindsight desktop tracker"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hindsight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Capture + image encoding. xcap is the maintained successor to the abandoned
# `screenshots` crate; unlike `screenshots` 0.8 (X11/wlr-screencopy only, which
# crashes natively on GNOME/KDE Wayland) it captures through the XDG desktop
# portal + PipeWire, so it works on modern Linux desktops. It returns the same
# `image` 0.25 RgbaImage we encode with, so no cross-version shim is needed.
#
# Pinned to EXACTLY 0.8.0: later xcap (0.8.3, 0.9.x) pull pipewire-rs 0.9 →
# libspa 0.9.2, whose bindings need the `spa_video_info_raw.flags` field added
# only in PipeWire 1.4 — which no GitHub-hosted runner ships yet (ubuntu-24.04
# is on PipeWire 1.0), so those fail to compile in CI. xcap 0.8.0 uses
# pipewire-rs 0.8 / libspa 0.8, which build against the runner's system
# PipeWire. SPA's pod wire format is version-stable, so the resulting bundle
# still captures on PipeWire 1.4 (Ubuntu 26.04). Bump only once a runner (or a
# vendored install) provides PipeWire >= 1.4.
xcap = "=0.8.0"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Local outbox + upload
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Idle detection (cross-platform)
user-idle = "0.6"

# Logging + JSON
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors, IDs, time, sync, randomness
thiserror = "1"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.8"
once_cell = "1"

target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }
winreg = "0.55"
# Used directly for toast notifications so we can pass our AUMID even in dev
# mode. tauri-plugin-notification deliberately suppresses the AUMID when the
# exe lives under target/debug or target/release, which makes Windows attribute
# the toast to PowerShell.
tauri-winrt-notification = "0.7"

# Linux lock detection via DBus (zbus). We talk to org.freedesktop.ScreenSaver,
# which most modern desktop environments implement (GNOME, KDE, XFCE, Cinnamon).
# `tokio` feature integrates zbus's executor with our existing Tokio runtime.
target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
